# yolov8-openvino

./: CMakeLists.txt  README.md
include/: utils.h  yolo_pose.h
src/: main.cpp  utils.cpp  yolo_pose.cpp
yolov8_openvino/: CMakeLists.txt
yolov8_openvino/include/: yolo_detection.h
yolov8_openvino/src/: main.cpp  yolo_detection.cpp
